[gd_scene load_steps=23 format=2]

[ext_resource path="res://Enemies/daemon.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Demonio.gd" type="Script" id=2]
[ext_resource path="res://Hit and Hurt/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hit and Hurt/HitBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/DemonStat.gd" type="Script" id=5]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/HeartUIFullEnemy.png" type="Texture" id=7]
[ext_resource path="res://UI/HeartUIEmptyEnemy.png" type="Texture" id=8]
[ext_resource path="res://Enemies/DemonUI.gd" type="Script" id=9]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 52, 52 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 52, 0, 52, 52 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 104, 0, 52, 52 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 156, 0, 52, 52 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 208, 0, 52, 52 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 260, 0, 52, 52 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 312, 0, 52, 52 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 364, 0, 52, 52 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Animate",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=10]
radius = 16.0

[sub_resource type="CapsuleShape2D" id=11]
radius = 11.0

[sub_resource type="CircleShape2D" id=12]
radius = 14.0357

[sub_resource type="CircleShape2D" id=13]
radius = 80.0

[node name="Demonio" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.735577, 0.788462 )
frames = SubResource( 9 )
animation = "Animate"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
self_modulate = Color( 1, 1, 1, 0.109804 )
shape = SubResource( 10 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
self_modulate = Color( 1, 1, 1, 0.0980392 )
shape = SubResource( 11 )

[node name="HitBox" parent="." instance=ExtResource( 4 )]
collision_mask = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
self_modulate = Color( 1, 1, 1, 0.145098 )
shape = SubResource( 12 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
self_modulate = Color( 1, 1, 1, 0.0705882 )
shape = SubResource( 13 )

[node name="DemonState" type="Node" parent="."]
script = ExtResource( 5 )
max_health = 4

[node name="DemonUI" type="Control" parent="."]
margin_left = -17.0
margin_top = -29.0
margin_right = 39.0
margin_bottom = -21.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vacio" type="TextureRect" parent="DemonUI"]
margin_right = 74.0
margin_bottom = 12.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 2

[node name="lleno" type="TextureRect" parent="DemonUI"]
margin_right = 45.0
margin_bottom = 11.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 2
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="HurtBox"]

[editable path="HitBox"]

[editable path="PlayerDetectionZone"]
